# ltv_analise

./: README.md  boletos.ipynb  churn.ipynb  churn_tabelanova.ipynb  churn_tabelanova_validar.ipynb  contratos_finalizados.ipynb  dados_brutos.ipynb  ltv.py  pyproject.toml  tabela_completa_teste.ipynb  tabela_modelo.ipynb  teste_querry.ipynb
